test/sema/typeck/trait/self-static-call-unknown-method-with-unknown-arg.dora
trait Foo {
    static fn bar() {
        Self::unknown(unknown_var);
    }
}
